# pystempel

./: .gitignore  .pre-commit-config.yaml  Evaluation.html  Evaluation.ipynb  LICENSE.txt  README.rst  compile_stemmer_table.py  compile_table.py  environment.yml  extract_rules.py  morfeusz2.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: quality.yml
eval/: Evaluation.ipynb
pystempel/: __init__.py  egothor.py  stemmer.py
src/pystempel/: __init__.py  egothor.py  stemmer.py
src/pystempel/data/polimorf/: LICENSE.txt
stempel/: __init__.py  egothor.py  mutable.py  streams.py
tests/: base.py  sjp_dict.txt  test_benchmark.py  test_compare.py  test_egothor.py  test_polimorf.py  test_stemmer.py
